@startuml

entity User {
   + PK id : INT
   + username : varchar(64)
   + password : varchar(64)
   + role : Role
   + status : Status
   + manager : User
   + createdAt : timestamp
   + lastUpdate : timestamp
}

entity PrivateInfo {
   + PK id : INT
   + firstname : varchar(64)
   + lastname : varchar(64)
   + dateOfRegistration : date
   + dateOfBirth : date
   + documentType : documentType
   + documentNumber: varchar(64)
   + phone : varchar(15)
   + email : varchar(64)
   + comment : varchar(255)
   + user : User
   + createdAt : timestamp
   + lastUpdate : timestamp
}



entity Address {
   + PK id : INT
   + country : varchar(64)
   + city : varchar(64)
   + postcode : varchar(6)
   + street : varchar(64)
   + houseNumber : INT
   + privateInfo : PrivateInfo
   + info : varchar(64)
}

entity Account {
   + PK id : INT
   + user : User
   + iban : varchar(34)
   + swift : varchar(16)
   + status : Status
   + balance : DECIMAL(10,2)
   + createdAt : timestamp
   + lastUpdate : timestamp
}


entity Transaction {
   + PK id : INT
   + sender : account
   + receiver : account
   + amount : DECIMAL(10,2)
   + fee : DECIMAL(10,2)
   + comment : varchar(255)
   + transaction_date : DATETIME
   + transaction_status : TransactionStatus
   + transaction_type : TransactionType
   + createdAt : timestamp
   + lastUpdate : timestamp
}

entity TransactionType {
   + PK id : INT
   + name : varchar(16)
   + fee : DECIMAL(10,2)
   + description : varchar(64)
}

User ||--|| PrivateInfo : private_info_id
User ||--o{ User : manager_id
User ||--o{ Account : user_id
PrivateInfo ||--|| Address : address_id

Transaction }|--|| Account : sender >
Transaction }|--|| Account : receiver >
Transaction }|--|| TransactionType : transaction_type_id

@enduml